--- a/src/dockerfile
+++ b/src/dockerfile
@@ -1,10 +1,18 @@
 FROM python:3.12-slim
 
+RUN apt-get update && apt-get install -y --no-install-recommends \
+    ffmpeg v4l-utils libv4l-dev \
+    && rm -rf /var/lib/apt/lists/* \
+    && apt-get clean
+
 WORKDIR /app
 
 COPY requirements.txt ./
 RUN pip install --no-cache-dir -r requirements.txt
 
-COPY project/ ./project/
+COPY ../project/ ./
 
-# CMD [ "python", "./your-daemon-or-script.py" ]
+ENV GRADIO_SERVER_NAME="0.0.0.0"
+EXPOSE 7860
+
+CMD [ "python", "./project.py" ]
